Finished Tests & Code for the .add() & .remove methods - added accessory methods and tests.