@@ -24,7 +24,9 @@ public class LinkedListTest {
   @Test
   public void testConstructor() {
     assertTrue(aList.isEmpty());
-    assertEquals(0, aList.size());
+    assertNull(aList.getFirst());
+    assertNull(aList.getLast());
+    assertEquals(0, aList.size(aList.getFirst()));
     assertNull(aList.get(0));
   }
 
@@ -32,18 +34,18 @@ public class LinkedListTest {
   public void testAddFirst() {
     aList.addFirst("mi");
     assertFalse(aList.isEmpty());
-    assertEquals(1, aList.size());
+    assertEquals(1, aList.size(aList.getFirst()));
     assertEquals("mi", aList.get(0));
 
     aList.addFirst("re");
     assertFalse(aList.isEmpty());
-    assertEquals(2, aList.size());
+    assertEquals(2, aList.size(aList.getFirst()));
     assertEquals("re", aList.get(0));
     assertEquals("mi", aList.get(1));
 
     aList.addFirst("do");
     assertFalse(aList.isEmpty());
-    assertEquals(3, aList.size());
+    assertEquals(3, aList.size(aList.getFirst()));
     assertEquals("do", aList.get(0));
     assertEquals("re", aList.get(1));
     assertEquals("mi", aList.get(2));
@@ -53,18 +55,18 @@ public class LinkedListTest {
   public void testAddLast() {
     aList.addLast("do");
     assertFalse(aList.isEmpty());
-    assertEquals(1, aList.size());
+    assertEquals(1, aList.size(aList.getFirst()));
     assertEquals("do", aList.get(0));
 
     aList.addLast("re");
     assertFalse(aList.isEmpty());
-    assertEquals(2, aList.size());
+    assertEquals(2, aList.size(aList.getFirst()));
     assertEquals("do", aList.get(0));
     assertEquals("re", aList.get(1));
 
     aList.addLast("mi");
     assertFalse(aList.isEmpty());
-    assertEquals(3, aList.size());
+    assertEquals(3, aList.size(aList.getFirst()));
     assertEquals("do", aList.get(0));
     assertEquals("re", aList.get(1));
     assertEquals("mi", aList.get(2));
@@ -79,20 +81,20 @@ public class LinkedListTest {
     String note = aList.removeFirst();
     assertEquals("do", note);
     assertFalse(aList.isEmpty());
-    assertEquals(2, aList.size());
+    assertEquals(2, aList.size(aList.getFirst()));
     assertEquals("re", aList.get(0));
     assertEquals("mi", aList.get(1));
 
     note = aList.removeFirst();
     assertEquals("re", note);
     assertFalse(aList.isEmpty());
-    assertEquals(1, aList.size());
+    assertEquals(1, aList.size(aList.getFirst()));
     assertEquals("mi", aList.get(0));
 
     note = aList.removeFirst();
     assertEquals("mi", note);
     assertTrue(aList.isEmpty());
-    assertEquals(0, aList.size());
+    assertEquals(0, aList.size(aList.getFirst()));
     assertNull(aList.get(0));
   }
 
@@ -105,24 +107,24 @@ public class LinkedListTest {
     String note = aList.removeLast();
     assertEquals("mi", note);
     assertFalse(aList.isEmpty());
-    assertEquals(2, aList.size());
+    assertEquals(2, aList.size(aList.getFirst()));
     assertEquals("do", aList.get(0));
     assertEquals("re", aList.get(1));
 
     note = aList.removeLast();
     assertEquals("re", note);
     assertFalse(aList.isEmpty());
-    assertEquals(1, aList.size());
+    assertEquals(1, aList.size(aList.getFirst()));
     assertEquals("do", aList.get(0));
 
     note = aList.removeLast();
     assertEquals("do", note);
     assertTrue(aList.isEmpty());
-    assertEquals(0, aList.size());
+    assertEquals(0, aList.size(aList.getFirst()));
     assertNull(aList.get(0));
   }
 
-  // EC write a test for add(int index, String item)
+  // Extra Credit
   @Test
   public void testAdd(){
     // do
@@ -134,25 +136,32 @@ public class LinkedListTest {
 
     //Test for adding at index: 0 - addFirst("do")
     String result = aList.add(0,"do");
-    assertTrue(result);
-    assertEquals(4, aList.size());
-    aseertEquals("do", aList.get(0));
+    assertEquals("do", result);
+    assertEquals(4, aList.size(aList.getFirst()));
+    assertEquals("do", aList.get(0));
     assertEquals("re", aList.get(1));
 
     result = aList.add(2, "mi");
-    assertTrue(result);
-    assertEquals(5, aList.size());
+    assertEquals("mi", result);
+    assertEquals(5, aList.size(aList.getFirst()));
     assertEquals("re", aList.get(1));
     assertEquals("mi", aList.get(2));
     assertEquals("la", aList.get(3));
 
     //Test for adding at index:6 - addLast("do")
-    String result = aList.add(5, "do");
-    assertTrue(result);
+    result = aList.add(5, "do");
+    assertEquals("do", result);
+    assertEquals(6, aList.size(aList.getFirst()));
+    assertEquals("do", aList.get(0));
+    assertEquals("re", aList.get(1));
+    assertEquals("mi", aList.get(2));
+    assertEquals("la", aList.get(3));
+    assertEquals("ti", aList.get(4));
+    assertEquals("do", aList.get(5));
 
     result = aList.add(-1, "oops");
-    assertFalse(result);
-    assertEquals(6, aList.size());
+    assertNull(result);
+    assertEquals(6, aList.size(aList.getFirst()));
     assertEquals("do", aList.get(0));
     assertEquals("re", aList.get(1));
     assertEquals("mi", aList.get(2));
@@ -161,8 +170,8 @@ public class LinkedListTest {
     assertEquals("do", aList.get(5));
 
     result = aList.add(10, "oops");
-    assertFalse(result);
-    assertEquals(6, aList.size());
+    assertNull(result);
+    assertEquals(6, aList.size(aList.getFirst()));
     assertEquals("do", aList.get(0));
     assertEquals("re", aList.get(1));
     assertEquals("mi", aList.get(2));
@@ -171,7 +180,53 @@ public class LinkedListTest {
     assertEquals("do", aList.get(5));
   }
 
-  // EC write a test for remove(int index)
+  // Extra Credit
+  @Test
+  public void testRemove(){
+    aList.addLast("do");
+    aList.addLast("re");
+    aList.addLast("mi");
+    aList.addLast("la");
+    aList.addLast("ti");
+    aList.addLast("do");
+
+    String result = aList.remove(0);
+    assertEquals("do",result);
+    assertEquals("re", aList.get(0));
+    assertEquals(5, aList.size(aList.getFirst()));
+    assertEquals("re", aList.get(0));
+    assertEquals("mi", aList.get(1));
+    assertEquals("la", aList.get(2));
+    assertEquals("ti", aList.get(3));
+    assertEquals("do", aList.get(4));
+
+    result = aList.remove(4);
+    assertEquals("do", result);
+    assertEquals(4, aList.size(aList.getFirst()));
+    assertEquals("re", aList.get(0));
+    assertEquals("mi", aList.get(1));
+    assertEquals("la", aList.get(2));
+    assertEquals("ti", aList.get(3));
+
+    result = aList.remove(2);
+    assertEquals("la", result);
+    assertEquals(3, aList.size(aList.getFirst()));
+    assertEquals("re", aList.get(0));
+    assertEquals("mi", aList.get(1));
+    assertEquals("ti", aList.get(2));
+
+    result = aList.remove(-1);
+    assertNull(result);
+    assertEquals("re", aList.get(0));
+    assertEquals("mi", aList.get(1));
+    assertEquals("ti", aList.get(2));
+
+    result = aList.remove(10);
+    assertNull(result);
+    assertEquals("re", aList.get(0));
+    assertEquals("mi", aList.get(1));
+    assertEquals("ti", aList.get(2));
+  }
 
   // Edge Case Tests
   @Test
